2008-04-10  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed a glitch in Jose Dapena Paz's patch of yesterday
	* Added API documentation about cancelling

2008-04-09  Jose Dapena Paz  <jdapena@igalia.com>

	* Added libtinymail-camel/camel-lite/camel/camel-certdb-cst.c.
	Implementation of certificates database using maemo libcst. This
	makes you can manage certificates using the maemo tablet certificate
	manager.
	
	* libtinymail-camel/camel-lite/camel/camel-certdb.h,
	libtinymail-camel/camel-lite/camel/camel-private.h: modified to
	have a pointer to the CST object in certdb and certificate id in
	certificate object in case we compile with CST support.
	
	* libtinymail-camel/camel-lite/camel/camel-tcp-stream-ssl.c:
	Modified a bit the code for proper integration with cst (mainly
	removing direct access to internal fields).
	
	* libtinymail-camel/camel-lite/configure.ac,
	libtinymail-camel/camel-lite/camel/Makefile.am:
	Added support for detection and configuration of libcst.

2008-04-07 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	* libtinymail-camel:
		- fix some compiler warnings (return in void functions)
		- move declarations to start of block
		- fix CAMEL_POP3_CAP_LOGIN_DELAY (copy-paste bug where to
		enum items had same value)
		- some g_error => g_warning
		- DELE %u => DELE %s

2008-04-07  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-common.c
	(_string_to_camel_inet_addr): fixes an small memory issue when the
	email address starts with an "<"
	* libtinymail/tny-merge-folder.c
	(tny_merge_folder_get_id): fixed a reference leak

2008-04-07  Philip Van Hoof <pvanhoof@gnome.org>

	* Refcount problem in async contexts
	* Fixing the actual problem, too

2008-04-03  Philip Van Hoof <pvanhoof@gnome.org>

	* Merged patch for upstream camel-lite bug #257361
	* Bugfix for ticket #76
	* Added some robustness code

2008-04-02  Jose Dapena Paz  <jdapena@igalia.com>

	* Respect better the attachment flag headers also in POP (equivalent